stylesheets/stylesheet.css
body {
    background-color: #F8E9D7;
    margin: 0px;
    font-family: 'Montserrat', sans-serif;
    color: #4B7171;
}

.sidebar {
    display: flex;
    flex-direction: column;
    /* height: 100%; */
    width: 100%;
    color: #4B7171;
    background-color: #F9F3EC;
    text-align: center;
}
.better-notes{
    display: grid;
    text-align: center;
}

div.container-text {
    padding-bottom: 20px;
}

.dark-theme {
    border: 0;
    line-height: 3.0;
    padding: 0 10px;
    font-size: 1rem;
    text-align: center;
    color: #fff;
    text-shadow: 1px 1px 1px #000;
    border-radius: 10px;
    background-color: #6f6a87;
}
.blue-theme {
    border: 0;
    line-height: 3.0;
    padding: 0 10px;
    font-size: 1rem;
    text-align: center;
    color: #fff;
    text-shadow: 1px 1px 1px #000;
    border-radius: 10px;
    background-color: #5394a0;
}

textarea {
    font-size: .8rem;
    letter-spacing: 1px;
}
textarea {
    background-color: #F9F3EC;
    border-color: #5B98E7; 
    border-width: 3px;
    box-sizing: border-box;
    width: 95%;
    height: 150px;
    padding: 10px;
    resize: none;
    justify-content: center;
    margin: auto;
    display: block;
}

div.save-cancel {
    text-align: right;
}

.pink-theme {
    border: 0;
    line-height: 3.0;
    padding: 0 10px;
    font-size: 1rem;
    text-align: center;
    color: #fff;
    text-shadow: 1px 1px 1px #000;
    border-radius: 10px;
    background-color: #D9827C;
}

